# hostech

backend/: __init__.py  config.py  database.py  main.py  models.py  pyproject.toml  schemas.py
backend/router/: __init__.py  admin.py  auth.py  doctor.py  patient.py  receptionist.py  user.py
backend/services/: __init__.py  admin.py  auth.py  doctor.py  patient.py  receptionist.py  utils.py
